# lite_cog_ros2

./: .gitignore
src/driver/leishen/Lslidar_ROS2_driver-C16_V4.0/lslidar_driver/: CMakeLists.txt
src/driver/leishen/Lslidar_ROS2_driver-C16_V4.0/lslidar_driver/include/lslidar_driver/: lslidar_driver.h
src/driver/leishen/Lslidar_ROS2_driver-C16_V4.0/lslidar_driver/launch/: lslidar_c16_launch.py
src/driver/leishen/Lslidar_ROS2_driver-C16_V4.0/lslidar_driver/params/: lslidar_c16.yaml
src/driver/leishen/Lslidar_ROS2_driver-C16_V4.0/lslidar_driver/rviz_cfg/: lslidar_c16.rviz
src/driver/leishen/Lslidar_ROS2_driver-C16_V4.0/lslidar_driver/src/: lslidar_driver.cpp
src/driver/mid360/livox_ros_driver2-master/config/: MID360_config.json
src/driver/mid360/livox_ros_driver2-master/launch_ROS2/: msg_MID360_launch.py
src/driver/mid360/livox_ros_driver2-master/src/: lddc.cpp  lddc.h
src/driver/orbbec/: README.MD  README_CN.MD
src/driver/realsense/realsense2_camera/: CMakeLists.txt
src/driver/realsense/realsense2_camera/include/: base_realsense_node.h
src/driver/realsense/realsense2_camera/launch/: dr_camera_launch.py  test.launch.py
src/driver/realsense/realsense2_camera/src/: base_realsense_node.cpp
src/grid_map_foxy/grid_map_filters/src/: ColorBlendingFilter.cpp
src/grid_map_foxy/grid_map_loader/: CMakeLists.txt
src/grid_map_foxy/grid_map_rviz_plugin/: CMakeLists.txt
src/grid_map_foxy/grid_map_visualization/: CMakeLists.txt
src/nav/dr_nav2/: CMakeLists.txt  package.xml
src/nav/dr_nav2/config/: lite_nav2.yaml
src/nav/dr_nav2/launch/: dr_nav2.launch.py
src/nav/dr_nav2/rviz/: dr_nav2.rviz
src/nav/fast_gicp/: CMakeLists.txt  package.xml
src/nav/hdl_global_localization/: CMakeLists.txt  package.xml
src/nav/hdl_localization/: CMakeLists.txt  package.xml
src/nav/hdl_localization/apps/: globalmap_server_app.hpp  hdl_localization_app.hpp  hdl_localization_composition.cpp
src/nav/hdl_localization/include/hdl_localization/: pose_system.hpp
src/nav/hdl_localization/launch/: lite_localization.launch.py
src/nav/hdl_localization/src/hdl_localization/: pose_estimator.cpp
src/nav/ndt_omp/: CMakeLists.txt  package.xml
src/nav/sensor_test/: CMakeLists.txt  package.xml
src/nav/sensor_test/src/: sensor_test.cpp
src/navigation2-foxy/nav2_bt_navigator/behavior_trees/: navigate_w_replanning_and_recovery.xml
src/navigation2-foxy/nav2_bt_navigator/src/: bt_navigator.cpp
src/navigation2-foxy/nav2_dwb_controller/dwb_core/src/: dwb_local_planner.cpp
src/navigation2-foxy/nav2_dwb_controller/dwb_critics/src/: prefer_forward.cpp
src/navigation2-foxy/nav2_regulated_pure_pursuit_controller/include/nav2_regulated_pure_pursuit_controller/: regulated_pure_pursuit_controller.hpp
src/navigation2-foxy/nav2_regulated_pure_pursuit_controller/src/: regulated_pure_pursuit_controller.cpp
src/pipeline/data/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
src/pipeline/pipeline/: Constants.py  LocationRecorder.py  LocationRecorder_EN.py  RobotCommander.py  Task.py  TaskPoint.py  TaskTransfer.py
src/slam/faster_lio/: CMakeLists.txt  package.xml
src/slam/faster_lio/app/: run_mapping_offline.cc  run_mapping_online.cc
src/slam/faster_lio/cmake/: packages.cmake
src/slam/faster_lio/config/: c16.rviz  c16.yaml
src/slam/faster_lio/include/: common_lib.h  imu_processing.hpp  laser_mapping.h  pointcloud_preprocess.h  so3_math.h
src/slam/faster_lio/launch/: mapping_c16.launch.py
src/slam/faster_lio/rviz_cfg/: loam_livox.rviz
src/slam/faster_lio/src/: imu_processing.cc  laser_mapping.cc  pointcloud_preprocess.cc
src/slam/faster_lio_interface/: CMakeLists.txt  package.xml
src/slam/octomap_mapping/octomap_server/: CMakeLists.txt
src/slam/octomap_mapping/octomap_server/include/octomap_server/: my_octomap.hpp
src/slam/octomap_mapping/octomap_server/src/: my_octomap.cpp
src/slam/pcd2grid/: CMakeLists.txt  package.xml
src/slam/pcd2grid/launch/: pcd2grid.launch.py
src/slam/pcd2grid/rviz/: config.rviz
src/track/: run_tracker.py
src/track/RobotController/: RobotController.py
src/transfer/transfer/: CMakeLists.txt  package.xml
src/voa/src/voa/: CMakeLists.txt  package.xml
src/voa/src/voa/config/: voa.yaml
src/voa/src/voa/launch/: debug_launch.py  voa_launch.py  voa_rviz_launch.py
src/voa/src/voa/rviz/: voa.rviz
src/voa/src/voa/src/: FakeImuPublisher.cpp  GridMapper.hpp  MyGridMap.hpp  PointCloudProcessor.hpp  SafetyController.hpp  VoaComposition.cpp
system/scripts/depth_camera/realsense/: start_realsense.sh
system/scripts/lidar/: start_livox.sh  start_lslidar.sh
system/scripts/nav/: start_nav.sh
system/scripts/slam/: gridmap.sh  save_map.sh  start_slam.sh
system/scripts/transfer/: start_transfer.sh
system/scripts/voa/: start_voa.sh
