<?xml version="1.0"?>
<package format="3">
    <name>hdl_localization</name>
    <version>0.0.0</version>
    <description>The hdl_localization package</description>

    <maintainer email="koide@aisl.cs.tut.ac.jp">koide</maintainer>

    <license>BSD</license>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <depend>ament_cmake</depend>
    <depend>rosidl_default_generators</depend>
    <depend>rosidl_default_runtime</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>ament_index_cpp</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_srvs</depend>
    <depend>ndt_omp</depend>
    <depend>fast_gicp</depend>
    <depend>hdl_global_localization</depend>
    <depend>pcl</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_geometry_msgs</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
